--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,12 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:0.9.+'
+      classpath 'com.android.tools.build:gradle:1.0.1'
   }
 }
 
 def isReleaseBuild() {
-  return version.contains("SNAPSHOT") == false
+    return version.contains("SNAPSHOT") == false
 }
 
 allprojects {
