--- a/demo/gradle/wrapper/gradle-wrapper.properties
+++ b/demo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Feb 17 13:41:14 EET 2015
+#Wed Apr 10 15:27:10 PDT 2013
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
